--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ greenribbon-service/src/main/generated/*
 
 ### VS Code ###
 .vscode/
+
+
+
+git remote set-url origin https://YOURUSERNAME@github.com/USERNAME/REPOSITORY.git
