update 설정으로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-# MySQL À» »ç¿ëÇÒ °Í.
+# MySQL ì„ ì‚¬ìš©í•  ê²ƒ.
 spring.jpa.database=mysql
 
-# datasource ¼³Á¤
+# datasource ì„¤ì •
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://codic-db.cfgbs9nzcfco.ap-northeast-2.rds.amazonaws.com/codicdb
 spring.datasource.username=codic
 spring.datasource.password=qwer1234
 
-# ÀÚµ¿À¸·Î ddl »ı¼ºÇØÁÖ´Â ¿É¼Ç Ã¼Å©
+# ìë™ìœ¼ë¡œ ddl ìƒì„±í•´ì£¼ëŠ” ì˜µì…˜ ì²´í¬
 spring.jpa.hibernate.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-# MySQL »ó¼¼ ÁöÁ¤
+# MySQL ìƒì„¸ ì§€ì •
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# »ç¿ëµÇ´Â SQL ÄÜ¼ÖÃ¢¿¡ Ãâ·Â
+# ì‚¬ìš©ë˜ëŠ” SQL ì½˜ì†”ì°½ì— ì¶œë ¥
 spring.jpa.show-sql=true
 
-# Á¤·ÄµÈ SQL Ãâ·Â
+# ì •ë ¬ëœ SQL ì¶œë ¥
 #spring.jpa.properties.hibernate.format_sql=true
