회원가입/로그인 가능 (이화인인증x)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
-# MySQL ì„ ì‚¬ìš©í•  ê²ƒ.
+# MySQL À» »ç¿ëÇÒ °Í.
 spring.jpa.database=mysql
 
-# datasource ì„¤ì •
+# datasource ¼³Á¤
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://codic-db.cfgbs9nzcfco.ap-northeast-2.rds.amazonaws.com/codicdb
 spring.datasource.username=codic
 spring.datasource.password=qwer1234
 
-# ìë™ìœ¼ë¡œ ddl ìƒì„±í•´ì£¼ëŠ” ì˜µì…˜ ì²´í¬
+# ÀÚµ¿À¸·Î ddl »ı¼ºÇØÁÖ´Â ¿É¼Ç Ã¼Å©
 spring.jpa.hibernate.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
-# MySQL ìƒì„¸ ì§€ì •
+# MySQL »ó¼¼ ÁöÁ¤
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# ì‚¬ìš©ë˜ëŠ” SQL ì½˜ì†”ì°½ì— ì¶œë ¥
+# »ç¿ëµÇ´Â SQL ÄÜ¼ÖÃ¢¿¡ Ãâ·Â
 spring.jpa.show-sql=true
 
-# ì •ë ¬ëœ SQL ì¶œë ¥
+# Á¤·ÄµÈ SQL Ãâ·Â
 #spring.jpa.properties.hibernate.format_sql=true
