--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,32 @@
+buildscript {
+	ext {
+		springBootVersion = '2.2.6.RELEASE'
+		querydslPluginVersion = '1.0.10'
+	}
+	repositories {
+		mavenCentral()
+		maven { url "https://plugins.gradle.org/m2/" } // plugin 저장소
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.6.RELEASE")
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE"
+		classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10")
+	}
+}
 plugins {
 	id 'org.springframework.boot' version '2.5.2'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'com.ewerk.gradle.plugins.querydsl' version('1.0.10')
 }
 
 group = 'ewhacodic'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+compileQuerydsl{
+	options.annotationProcessorPath = configurations.querydsl
+}
 
 configurations {
 	compileOnly {
@@ -23,6 +43,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
@@ -32,12 +53,10 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-<<<<<<< Updated upstream
-=======
 
 	// querydsl
-	implementation 'com.querydsl:querydsl-jpa'
-	implementation 'com.querydsl:querydsl-apt'
+	//implementation 'com.querydsl:querydsl-jpa'
+	//implementation 'com.querydsl:querydsl-apt'
 
 	//ranking 관련 의존성 추가
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache
@@ -47,6 +66,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/it.ozimov/embedded-redis
 	implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
 
+	//mail 관련 의존성 추가
+	// https://mvnrepository.com/artifact/javax.mail/javax.mail-api
+	implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
+	// https://mvnrepository.com/artifact/org.springframework/spring-context-support
+	implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.9'
 
 
 
@@ -54,9 +78,35 @@ dependencies {
 
 
 
->>>>>>> Stashed changes
+
+
+
+
+
 }
 
 test {
 	useJUnitPlatform()
+}
+
+
+def querydslSrcDir = 'src/main/generated' // QClass 생성 위치
+
+querydsl {
+	library = "com.querydsl:querydsl-apt"
+	jpa = true
+	querydslSourcesDir = querydslSrcDir
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', querydslSrcDir]
+		}
+	}
+}
+
+
+configurations {
+	querydsl.extendsFrom compileClasspath
 }
