--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 		maven { url "https://plugins.gradle.org/m2/" } // plugin 저장소
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.6.RELEASE")
+		classpath("org.sp정ringframework.boot:spring-boot-gradle-plugin:2.2.6.RELEASE")
 		classpath "io.spring.gradle:dependency-management-plugin:1.0.7.RELEASE"
 		classpath("gradle.plugin.com.ewerk.gradle.plugins:querydsl-plugin:1.0.10")
 	}
@@ -55,8 +55,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	// querydsl
-	//implementation 'com.querydsl:querydsl-jpa'
-	//implementation 'com.querydsl:querydsl-apt'
+	//	//implementation 'com.querydsl:querydsl-jpa'
+	//	//implementation 'com.querydsl:querydsl-apt'
 
 	//ranking 관련 의존성 추가
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-cache
