--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ HELP.md
 !gradle/wrapper/gradle-wrapper.jar
 greenribbon-service/src/main/generated/*
 */build/*
+/src/main/generated/
 
 ### STS ###
 .apt_generated
