--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,8 +1,8 @@
 
-##Áö¸ŞÀÏ SMTP¸¦ »ç¿ëÇÏ±â À§ÇØ ¼³Á¤
+##ì§€ë©”ì¼ SMTPë¥¼ ì‚¬ìš©í•˜ê¸° ìœ„í•´ ì„¤ì •
 spring.mail.host=smtp.gmail.com
 
-##465 Æ÷Æ®¸¦ »ç¿ëÇÏ±â À§ÇØ ¼³Á¤
+##465 í¬íŠ¸ë¥¼ ì‚¬ìš©í•˜ê¸° ìœ„í•´ ì„¤ì •
 mail.smtp.ssl.enable=true
 
 mail.smtp.auth=true
@@ -14,6 +14,6 @@ mail.smtp.socketFactory.fallback=false
 mail.smtp.port=465
 mail.smtp.socketFactory.port=465
 
-#admin ±¸±Û ¾ÆÀÌµğ °èÁ¤ id,password
+#admin êµ¬ê¸€ ì•„ì´ë”” ê³„ì • id,password
 AdminMail.id=dotsizenobia
-AdminMail.password=dotsiyoonseo
+AdminMail.password=dylupdjbzwbjnkli
