fix - tag 배열로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.show-sql=true
 
 #spring.security.user.name = codic
 #spring.security.user.password = qwer1234
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
